--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -12,31 +12,16 @@
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
-
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
-
     <!-- LOGIN FORM -->
-    <form action="/login" method="post">
+    <form action="/forgot" method="post">
         <div class="form-group">
             <label>Email</label>
             <input type="text" class="form-control" name="email">
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
-        </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
+        <button type="submit" class="btn btn-warning btn-lg">Reset Password</button>
     </form>
 
-    <hr>
-
-    <p>Need an account? <a href="/signup">Signup</a></p>
-    <p>Forgot your password<a href="/forgot">Forgot password</a></p>
-    <p>Or go <a href="/">home</a>.</p>
 
 </div>
 </div>
